# quantum-generator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
src/quantumforge/application/dto/: __init__.py  requests.py  responses.py
src/quantumforge/application/services/: code_generation_service.py
src/quantumforge/application/use_cases/: __init__.py  generate_quantum_code.py
src/quantumforge/domain/: __init__.py
src/quantumforge/domain/entities/: __init__.py  retriever_config.py  training_result.py  training_session.py
src/quantumforge/domain/interfaces/: __init__.py  generator.py  reranker.py  retriever.py  trainer.py
src/quantumforge/fine-tuning/: trainer.py
src/quantumforge/infrastructure/: __init__.py
src/quantumforge/infrastructure/fine_tuning/: __init__.py  data_loader.py  evaluation.py  model_loader.py  trainer.py
src/quantumforge/infrastructure/generators/: __init__.py  codegemma_generator.py  codellama_generator.py  deepseek_generator.py  qwen_generator.py
src/quantumforge/infrastructure/rag/: __init__.py  chroma_retriever.py  chunker.py  embedder.py  rag_pipeline.py  reranker.py  retriever.py
src/quantumforge/infrastructure/time/: system_clock.py
src/quantumforge/models/: base.py  codegemma.py  codellama.py  deepseek.py  factory.py  qwen.py
src/quantumforge/rag/: factory.py  retriever.py
src/quantumgenerator/: __init__.py
src/quantumgenerator/application/: __init__.py
src/quantumgenerator/application/dto/: __init__.py  requests.py  responses.py
src/quantumgenerator/application/services/: __init__.py  code_generation_service.py
src/quantumgenerator/application/use_cases/: __init__.py  generate_quantum_code.py
src/quantumgenerator/domain/: __init__.py
src/quantumgenerator/domain/entities/: __init__.py  retriever_config.py  training_result.py  training_session.py
src/quantumgenerator/domain/interfaces/: __init__.py  clock.py  generator.py  rag_pipeline.py  reranker.py  retriever.py  trainer.py
src/quantumgenerator/infrastructure/: __init__.py
src/quantumgenerator/infrastructure/fine_tuning/: data_loader.py  evaluation.py  model_loader.py  trainer.py
src/quantumgenerator/infrastructure/generators/: __init__.py  codegemma_generator.py  codellama_generator.py  deepseek_generator.py  factory.py  qwen_generator.py
src/quantumgenerator/infrastructure/logger/: __init__.py
src/quantumgenerator/infrastructure/rag/: __init__.py  chroma_retriever.py  chunker.py  data_loader.py  embedder.py  factory.py  faiss_retriever.py  rag_pipeline.py  reranker.py
src/quantumgenerator/infrastructure/time/: __init__.py  system_clock.py
src/quantumgenerator/interfaces/: __init__.py
src/quantumgenerator/interfaces/api/: __init__.py  constants.py  dependencies.py  main.py  schemas.py
src/quantumgenerator/interfaces/api/routes/: __init__.py  generation.py
tests/integration/: test_fine_tuning.py  test_models.py  test_rag.py
tests/unit/: test_application_unit.py  test_fine_tuning.py  test_models.py  test_rag.py
