[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumgenerator"
version = "0.1.0"
description = "Bridging Large Language Models and Quantum Computing - Generate quantum code using fine-tuned LLMs with RAG"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Huy Pham", email = "huypham0297@gmail.com"}
]
keywords = ["quantum computing", "llm", "code generation", "qiskit", "pennylane", "cirq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.38.0,<5.0.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.43.0",
    "einops>=0.6.0",
    "peft>=0.8.0",
    "trl>=0.11.0,<0.12.0",
    "langchain>=0.2.0,<0.3.0",
    "langchain-community>=0.2.0,<0.3.0",
    "langchain-chroma>=0.1.0,<0.2.0",
    "langchain-core>=0.2.0,<0.3.0",
    "langchain-text-splitters>=0.2.0,<0.3.0",
    "sentence-transformers>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/huypq02/quantum-generator"
Repository = "https://github.com/huypq02/quantum-generator"
Issues = "https://github.com/huypq02/quantum-generator/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["quantumgenerator*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
